--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,14 @@
 index.main.callout=Starter Template
+
+navbar.home.text=Home
+navbar.about.text=About
+
+copy.h1.text=Who we are
+copy.p.lead=We are a community of DevOps engineers who has the goal of helping the organisations deliver business value \
+faster, through technology, while having fun
+copy.project.lead.intro=Lorem ipsum dolor sit amet, consectetur adipisicing elit, \
+sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, \
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. \
+Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. \
+Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+copy.viewdetails.button=View Details
